Added a leaf icon and changed some styling
Signed-off-by: Dan Martens <dan@friendsoftheweb.com>

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
   
   <body>
     <div id="alles">
-      <div class="ceci-nest-pas" title="This is not a website.">Ceci n'est pas une website.</div>
-      <div class="di-me"><a href="http://friendsoftheweb.com" title="Where I work.">Friends of the Web</a> <span class="separate">&times;</span> <a href="http://twitter.com/danmartens" title="Who I am.">@danmartens</a>
+      <div class="ceci-nest-pas" title="This is not a website.">
+        <div class="text">Ceci n'est pas une website.</div>
+        <div class="image"></div>
+      </div>
+      <div class="di-me"><a href="http://friendsoftheweb.com">Friends of the Web</a><img class="seperate" src="leaf.png" /><a href="http://twitter.com/danmartens">@danmartens</a></div>
     </div>
   </body>
 </html>
