prevent iPhone scaling
Signed-off-by: Dan Martens <dan@friendsoftheweb.com>

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     
+    <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    
     <script type="text/javascript" src="http://use.typekit.com/aka2rnq.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
