--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     
-    <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, maximum-scale=1.0" />
     
     <script type="text/javascript" src="http://use.typekit.com/aka2rnq.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
   
   <body>
-    <div id="alles">
+    <div id="all">
       <div class="ceci-nest-pas" title="This is not a website.">
         <div class="text">Ceci n'est pas une website.</div>
         <div class="image"></div>
       </div>
-      <div class="di-me"><a href="http://friendsoftheweb.com">Friends of the Web</a><img class="seperate" src="leaf.png" /><a href="http://twitter.com/danmartens">@danmartens</a></div>
+      <div class="links">
+        <a href="http://friendsoftheweb.com">Friends of the Web</a>
+        <span class="seperator"></span>
+        <a href="http://twitter.com/danmartens">@danmartens</a>
+      </div>
     </div>
   </body>
 </html>
