--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id="all">
       <div class="ceci-nest-pas" title="This is not a website.">
-        <div class="text">Ceci n'est pas une website.</div>
+        <div class="text">Ceci n'est pas un site.</div>
         <div class="image"></div>
       </div>
       <div class="links">
